# researchbotbook

./: .gitignore  LICENSE  README.md  pyproject.toml
src/researchbotbook/: __init__.py  agents.py  cli.py  llm.py  models.py  store.py
tests/: test_pipeline.py
